FDS 13주차 공부-6월 7일

--- a/React.js/FDS_React/1.9_Lift_State.md
+++ b/React.js/FDS_React/1.9_Lift_State.md
@@ -401,20 +401,23 @@ function BoilingVerdict(props) {
 }
 
 class TemperatureInput extends React.Component {
+  // 온도를 입력하는 역할을 하는 클래스
   constructor(props) {
     super(props);
     this.handleChange = this.handleChange.bind(this);
   }
 
   handleChange(e) {
+    // handleChange함수는 입력된 값을 받아서 onTemperatureChange라는 TemperatureInput의 props로 사용
     this.props.onTemperatureChange(e.target.value);
   }
 
   render() {
-    const temperature = this.props.temperature;
-    const scale = this.props.scale;
+    const temperature = this.props.temperature; // temperature도 props로 사용
+    const scale = this.props.scale; // scale도 props로 사용
     return (
       <fieldset>
+        {/* scale이 c면 celsius, f면 fahrenheit */}
         <legend>Enter temperature in {scaleNames[scale]}:</legend>
         <input value={temperature} onChange={this.handleChange} />
       </fieldset>
@@ -423,29 +426,34 @@ class TemperatureInput extends React.Component {
 }
 
 class Calculator extends React.Component {
+  // 온도를 계산하는 용도의 class
   constructor(props) {
     super(props);
     this.handleCelsiusChange = this.handleCelsiusChange.bind(this);
     this.handleFahrenheitChange = this.handleFahrenheitChange.bind(this);
     this.state = { temperature: "", scale: "c" };
+    // 초기 state 설정
   }
 
   handleCelsiusChange(temperature) {
+    // 섭씨로 state를 바꿔주기 위한 장치
     this.setState({ scale: "c", temperature });
   }
 
   handleFahrenheitChange(temperature) {
+    //화씨로 state를 바꿔주기 위한 장치
     this.setState({ scale: "f", temperature });
   }
 
   render() {
-    const scale = this.state.scale;
-    const temperature = this.state.temperature;
+    const scale = this.state.scale; // scale은 state의 scale
+    const temperature = this.state.temperature; // temperature는 state의 temperature
     const celsius =
-      scale === "f" ? tryConvert(temperature, toCelsius) : temperature;
+      scale === "f" ? tryConvert(temperature, toCelsius) : temperature; // scale이 f이면 섭씨로 바꿔주고 c이면 섭씨가 맞기에 바로 온도를 값으로 할당
     const fahrenheit =
-      scale === "c" ? tryConvert(temperature, toFahrenheit) : temperature;
+      scale === "c" ? tryConvert(temperature, toFahrenheit) : temperature; // scale이 c이면 화씨로 바꿔주고 f이면 화씨가 맞기에 바로 온도를 값으로 할당
 
+    // TempertaureInput 컴포넌트를 화씨와 섭씨 두개 렌더 + 물이 끓는지 않끓는지 알려주는 계산 componenet 렌더
     return (
       <div>
         <TemperatureInput
@@ -465,6 +473,7 @@ class Calculator extends React.Component {
 }
 
 ReactDOM.render(<Calculator />, document.getElementById("root"));
+// Calculator Component index.html에서 렌더
 ```
 
 <br>
