--- a/React.js/FDS_React/2.9_Redux.md
+++ b/React.js/FDS_React/2.9_Redux.md
@@ -310,9 +310,16 @@ state 를 복사하기 전엔 그 안의 무엇에도 할당하지 말아야 한
 [js 로 만들어본 리듀서]
 
 ```js
+// 액션: 상태를 어떻게 변형시킬지 나타내는 *객체*.
+// `type`이라는 속성을 가지고 있어야 합니다.
+
+// 액션 타입
+
 const INCR = "INCR";
 const ZERO = "ZERO";
 const ADD_TODO = "ADD_TODO";
+
+// 액션 생산자
 
 function incr(amount) {
   return {
@@ -333,6 +340,10 @@ function addToDo(body) {
     body
   };
 }
+
+// 리듀서
+// 상태와 액션을 인수로 받아서, 다음 상태를 반환하는 *순수 함수*
+// 리듀서의 매개변수에 상태의 기본값을 줘야하는 것이 관례입니다.
 
 // reducer 쪼개기 #1
 // rootReducer의 역할 분리 - count
