algorithm 문제 풀이

--- a/GraphQL/1.GraphQL이란?.md
+++ b/GraphQL/1.GraphQL이란?.md
@@ -2,15 +2,15 @@
 
 ## Graph QL 이란?
 
-Graph QL 은 API 를 위한 쿼리 언어로,
-데이터를 위해 정의한 타입 시스템을 사용하여
-쿼리를 실행하는 서버 사이드 런타입입니다.
+Graph QL 은 API 를 위한 쿼리 언어로,<br>
+데이터를 위해 정의한 타입 시스템을 사용하여<br>
+쿼리를 실행하는 서버 사이드 런타입입니다.<br>
 
-특정 데이터베이스 또는 스토리지 엔진과 연결되어 있지 않으며,
-대신 기존 코드 및 데이터에 의해 뒷받침됩니다.
+특정 데이터베이스 또는 스토리지 엔진과 연결되어 있지 않으며,<br>
+대신 기존 코드 및 데이터에 의해 뒷받침됩니다.<br>
 
-GraphQL 서비스는 해당 타입에 타입 및 필드를 정의한 다음,
-각 타입의 각 필드에 대한 기능을 제공함으로써 생성됩니다.
+GraphQL 서비스는 해당 타입에 타입 및 필드를 정의한 다음,<br>
+각 타입의 각 필드에 대한 기능을 제공함으로써 생성됩니다.<br>
 
 <br>
 
@@ -26,3 +26,47 @@ type User {
     name: String
 }
 ```
+
+```js
+// 위의 기능을 JavaScript로 작성하면 다음과 같습니다.
+
+function Query_me(request) {
+  return request.auth.user;
+}
+
+function User_name(user) {
+  return user.getName();
+}
+```
+
+<br>
+
+GraphQL 서비스가 실행되면 (일반적으로 웹 서비스의 URL) GraphQL 쿼리를 전송하여,<br>
+유효성을 검사하고 실행할 수 있습니다. 수신 된 쿼리는 먼저 정의된 타입과 필드만<br>
+참조하는지 확인한 다음 정의된 기능을 실행하여 결과를 생성합니다.<br>
+
+<br>
+
+```sql
+{
+    me {
+        name
+    }
+}
+```
+
+<br>
+
+다음과 같은 JSON 결과를 생성할 수 있습니다.
+
+<br>
+
+```json
+{
+  "me": {
+    "name": "Moong2"
+  }
+}
+```
+
+<br>
