holiday computer think study

--- a/LogicalStudy/0.Algorhitm?.md
+++ b/LogicalStudy/0.Algorhitm?.md
@@ -36,3 +36,45 @@
   - O(N3) : 입력 자료의 크기가 N일경우 N3 번만큼의 수행시간을 가진다.
   - O(2n) : 입력 자료의 크기가 N일경우 2N 번만큼의 수행시간을 가진다.
   - O(n!) : 입력 자료의 크기가 N일경우 n*(n-1)*(n-2)... * 1(n!) 번만큼의 수행시간을 가진다. ex)외판원 문제(TSP)의 기본적인 해법
+
+<br/>
+
+## 유명한 알고리즘의 종류
+
+### 탐색
+
+- 선형 탐색법(리니어 서치) : 맨앞에서 순서대로 찾는다.
+- 이진 탐색법(바이너리 서치) : 범위를 절반씩 추려가면서 찾는다.
+- 해시 탐색법 : 계선해서 저장 위치를 찾는다.
+
+<br/>
+
+### 정렬
+
+- 단순 정렬법(선택 소트) : 최솟(댓)값 선택하여 맨 앞부터 순서대로 나열한다.
+- 단순 교환법(버블 소트) : 옆에 있는 데이터를 교환하면서 자리를 바꿔 나열한다.
+- 단순 삽입법(삽입 소트) : 데이터를 올바른 위치에 삽입하면서 자리를 바꿔 나열한다.
+- 퀵 정렬 : 기준 데이터를 기반으로 대소 분할을 반복하여 자리를 바꿔 나열한다.
+- 머지 정렬 : 이분할과 머지(병합)를 이용하여 자리를 바꿔 나열한다.
+- 힙 정렬 : 힙이라는 데이터 구조를 이용하여 자리를 바꿔 나열한다.
+- 셀 정렬 : 그룹을 나누면서 자리를 바꿔 나열한다.
+
+<br/>
+
+### 수치 계산 (수치해석)
+
+- 에라토스테네스의 체(Sieve of Eratosthenes) : 소수를 구하는 알고리즘
+- 유클리드 알고리즘 : 최대 공약수를 구하는 알고리즘
+- 가우스 소거법 : 연립 1차 방정식을 푸는 알고리즘
+- 사다리꼴 법칙 : 정적분의 근삿값을 구하기 위한 알고리즘
+- 다익스트라 알고리즘 : 그래프에서 최적 경로를 구하는 알고리즘
+- 이분법 : 방정식을 푸는 알고리즘
+- 뉴턴법(뉴턴 랩슨법) : 방정식을 푸는 알고리즘
+  
+<br/>
+
+### 문자열 탐색
+
+- 무차별 검색법(브루트 포스 검색법) : 맨 앞부터 한 문자씩 차례대로 탐색
+- KMP(커누스-모리스-프랫) 알고리즘 : 불일치 부분에 착목하여 탐색
+- BM(보이어-무어) 알고리즘 : 부분 문자열의 끝에서부터 탐색
