--- a/LogicalStudy/4.SearchAlgorhitm.md
+++ b/LogicalStudy/4.SearchAlgorhitm.md
@@ -123,5 +123,121 @@ findIndexBinary([1,2,4,5,6,7], 7)
 
 ## 해시 탐색법 (Hash Search)
 
-- 오늘 공부할 예정입니다.
+앞에서 살펴본 선형 탐새개이나 이진 탐새개법의 전체 조건은 어떤 데이터가 어떤 요소에 들어 있는지<br>
+전혀 모르는 상태에서 검색을 시작한다는 것이다.<br>
+그러나 해시 탐색법은 데이터의 내용과 저장한 곳의 요소를 미리 연계해 둠으로써 극히 짧은 시간 안에<br>
+탐색할 수 있도록 고안된 알고리즘이다.<br>
 
+해시 탐색법은 `데이터를 데이터와 같은 첨자의 요소에 넣어 두면 한 번에 찾을 수 있지 않을까?`라는<br>
+아이디어에서 출발한다.<br>
+
+예를 들어보면 36인 데이터는 첨자 36의 요소에, 48인 데이터는 첨자 48의 요소에 두는 식이다.<br>
+하지만 이렇게 2개의 데이터만 저장해도 49개의 요소를 가진 배열이 있어야 한다.<br>
+공간적으로 굉장히 낭비가 심해진다.<br>
+
+좀 더 효율적으로 배열을 사용하기 위해 데이터에 일정한 계산을 실시하여,<br>
+그 계산 결과값과 같은 첨자를 가진 요소에 보관하는 방법을 생각해보자.<br>
+
+둘 다 12로 나누어진다.<br>
+그러면 36은 첨자 3에 48은 첨자 4에 저장할 수 있다.<br>
+그럼 5개면 저장이 가능하다.<br>
+
+반드시 어떤 계산을 이용해야 한다는 법은 없지만,<br>
+가능한 한 요소 수가 적게 끝나는 계산식이 더 좋다.<br>
+
+좀 더 명확하게 다시 예를 들어보면,<br>
+11, 15, 23, 26에 해당되는 숫자를<br>
+배열의 크기가 7인 요소에 저장한다면 다음과 같이 할 수 있다.<br>
+
+
+```js
+let arr = new Array(7);
+// 어떤 숫자로 나누더라도 7로 나누면 0~6의 숫자가 떨어진다.
+// 공의 숫자 % 7 = 공을 넣은 칸의 번호
+// 11 % 7 = 4
+// 15 % 7 = 1
+// 23 % 7 = 2
+// 26 % 7 = 5
+
+arr[4] = 11;
+arr[1] = 15;
+arr[2] = 23;
+arr[5] = 26;
+// => [ <1 empty item>, 15, 23, <1 empty item>, 11, 26, <1 empty item> ]
+```
+
+이와 같이 어떤 값에 해당하는 다른 값이 산출되는 계산식을 `함수`라고 한다.<br>
+그중에서도 어떤 값이 주어진 경우, 그 값을 대표하는 숫자를 계산하는 함수를 해시 함수라고 한다.<br>
+또한 해시 함수의 계산으로 산출된 값을 `해시값`이라고 한다.<br>
+위 예제의 해시값은 `공을 넣을 칸의 번호`다.<br>
+
+해시라는 단어는 잘게 썬다, 잘게 자른다의 의미이다.<br>
+`원래의 숫자를 모양이 변할 정도로 가공하여, 전혀 다른 값을 생성한다.`라는 의미로 봐도 좋다.<br>
+
+해시 탐색법은 미리 해시 함수를 사용하여 데이터를 저장하는 장소를 정해두어 검색 시간을<br>
+놀라울 정도로 단축시킬 수 있다는 장점이 있다.<br>
+
+해시 탐색법을 실현하려면 데이터의 저장 및 검색, 즉 2개의 알고리즘이 필요하다.<br>
+먼저 해시 함수를 사용하여 데이터를 저장하는 알고리즘을 알아보자.<br>
+
+```js
+// 먼저 배열을 2개 준비하자.
+
+let arrayA = [12,25,36,20,30,8,42]
+
+// 앞에서 배운 2개의 검색 알고리즘(선형 탐색, 이진 탐색)은
+// 배열의 요소를 데이터 수만큼 준비하면 충분했지만,
+// 해시 탐색법은 이와 달리 저장하는 데이터의 1.5~2배를 준비해야 한다.
+let arrayB = new Array(11).fill(0)
+
+// 저장할 요소의 배열을 순회하면서
+for (let i=0; i<arrayA.length; i++) {
+  // 저장할 공간(첨자)를 계산
+  let temp = arrayA[i]%11;
+  // 저장할 공간에 데이터가 없으면
+  if (!arrayB[temp]) {
+    // 저장하기
+    arrayB[temp] = arrayA[i]
+    // 저장할 공간에 데이터가 있으면
+  } else {
+    // 데이터가 없는 공간을 찾을때까지
+    while(arrayB[temp]) {
+      // temp를 증가, 하지만 배열의 크기가 11이므로, 
+      // 인덱스가 10을 넘으면(배열의 크기를 넘으면 안되기에) 0으로 변경
+      temp < arrayB.length-1 ? temp++ : temp = 0
+    }
+    // 데이터가 없는 공간을 찾으면 저장
+    arrayB[temp] = arrayA[i]
+  }
+}
+
+// [ 42, 12, 0, 25, 36, 0, 0, 0, 30, 20, 8 ]
+```
+
+저장을 훌륭하게 했다면 이제 탐색하는 알고리즘을 알아보자
+
+```js
+// 저장한 데이터와 찾을 요소를 Argument로 넣어준다.
+function findHashData(arr, target) {
+  // 저장할 공간에 데이터가 있어서 +1해준 경우를 제외하고는
+  // 첨자 = 저장할데이터%저장할배열의크기 이다.
+  let uniqueValue = target%arr.length;
+
+  // 찾고자 하는 값이 맞을 경우가 나올때까지
+  while (arr[uniqueValue] !== target) {
+    // 결과가 원하는 값이 아니면, (저장할데이터+1)%저장할배열의크기를 해준다.
+    uniqueValue = (uniqueValue+1)%arr.length
+  }
+  return `저장 위치는 ${uniqueValue}번째 요소입니다.`
+}
+
+findHashData(arrayB, 42)
+// => '저장 위치는 1번째 요소입니다.'
+```
+
+구현은 기존 탐색법보다 어렵지만, 검색 알고리즘 중에서도 매우 속도가 빠른 알고리즘이므로,<br>
+실제 프로그램에서도 많이 사용된다.<br>
+
+해시 탐색법의 빅오 표기법은 `O(1)`로 나타낼 수 있다.<br>
+다만, 해시 충돌이 일어날 경우 `O(n)`이 될 수 있다.<br>
+해시 충돌로 인해 모든 bucket의 value들을 찾아봐야 하는 경우도 있기 때문이다.<br>
