--- a/LogicalStudy/5.SortingAlgorithm.md
+++ b/LogicalStudy/5.SortingAlgorithm.md
@@ -23,9 +23,9 @@
 
 ## 단순 선택법 : 선택 정렬 (Selection Sort)
 
-단순 선택법은 `정렬되지 않은 데이터 중 가장 작은 데이터를 선택하여`
-`맨 앞부터 순서대로 정렬해 나가는 알고리즘`이다.
-`선택 정렬` 또는 단순히 `선택법`이라고 한다.
+단순 선택법은 `정렬되지 않은 데이터 중 가장 작은 데이터를 선택하여`<br>
+`맨 앞부터 순서대로 정렬해 나가는 알고리즘`이다.<br>
+`선택 정렬` 또는 단순히 `선택법`이라고 한다.<br>
 
 ```js
 let exploreIndex = 0;
@@ -70,3 +70,85 @@ while (exploreIndex !== exampleArray.length) {
 > 지수는 O(n2), 계승은 O(n!)
 
 <br>
+
+## 단순 교환법 : 버블 정렬 (Bubble Sort)
+
+단순 교환법은 `인접한 데이터를 교환하는 처리를 반복`하여,<br>
+최종적으로는 `모든 데이터를 오름차순 또는 내림차순으로 정렬`하는 알고리즘이다.<br>
+
+단순 교환법의 정렬 처리는 단순하다.<br>
+오름차순으로 정렬하려면 뒤부터 비교하여 앞으로 오도록 교환하는 과정을 반복하면 되고,<br>
+내림차순의 경우는 이와 반대로 진행된다.<br>
+
+```js
+// 정렬할 배열
+let exampleArray = [5, 3, 4, 1, 2];
+// 정렬 완료한 인덱스를 표기할 숫자타입의 변수
+let sortTargetIndex = 0;
+
+// 정렬할 배열을 다 정렬완료 할때까지
+while (sortTargetIndex < exampleArray.length - 1) {
+  // 마지막 인덱스를 표시할 숫자타입의 변수
+  let lastIndex = exampleArray.length - 1;
+  // 마지막 인덱스를 정렬완료 할 때까지
+  while (lastIndex > sortTargetIndex) {
+    // 만약 오른쪽의 숫자보다 왼쪽의 숫자가 크다면
+    if (!(exampleArray[lastIndex - 1] < exampleArray[lastIndex])) {
+      // 교환해준다.
+      let tempDataStore = exampleArray[lastIndex - 1];
+      exampleArray.splice(lastIndex - 1, 1, exampleArray[lastIndex]);
+      exampleArray.splice(lastIndex, 1, tempDataStore);
+      tempDataStore = null;
+    }
+    // 교환했으니까 다음칸으로 넘어가기
+    lastIndex--;
+  }
+  // 하나 완료했으니까 다음거 또 정렬하기
+  sortTargetIndex++;
+}
+
+// => [ 1, 2, 3, 4, 5 ]
+
+// 보다 직관적으로 이해하기 위해 과정을 console로 찍어보면
+
+// exampleArray[lastIndex]인 2보다
+// exampleArray[lastIndex-1]인 1이 작아서
+// 정렬할 필요가 없으니 lastIndex--;로 패스
+// [ 5, 3, 4, 1, 2 ]
+
+// exampleArray[lastIndex]인 1보다
+// exampleArray[lastIndex-1]인 4가 크기에
+// 교환
+// [ 5, 3, 4, 1, 2 ] => [ 5, 3, 1, 4, 2 ]
+
+// exampleArray[lastIndex]인 1보다
+// exampleArray[lastIndex-1]인 3이 크기에
+// 교환
+// [ 5, 3, 1, 4, 2 ] => [ 5, 1, 3, 4, 2 ]
+
+// exampleArray[lastIndex]인 1보다
+// exampleArray[lastIndex-1]인 5가 크기에
+// 교환
+// [ 5, 1, 3, 4, 2 ] => [ 1, 5, 3, 4, 2 ]
+
+// lastIndex(0) === sortFinishIndex(0)으로
+// 한 사이클 검사완료 하였으니
+// sortTargetIndex를 0에서 1로 변경 (sortTargetIndex++;)
+// [ 1, 5, 3, 4, 2 ]
+
+// 이후는 반복..
+// [ 1, 5, 3, 2, 4 ]
+// [ 1, 5, 2, 3, 4 ]
+// [ 1, 2, 5, 3, 4 ]
+// [ 1, 2, 5, 3, 4 ]
+// [ 1, 2, 3, 5, 4 ]
+
+// 정렬 끝
+// [ 1, 2, 3, 4, 5 ]
+```
+
+단순 교환법 자체는 이해하기 쉽지만,<br>
+실행속도가 보다시피 느리기 때문에,<br>
+대량의 데이터 정렬에 적합하지 않다.<br>
+
+단순 교환법, 즉 버블 정렬의 시간복잡도는 빅오표기로 `O(n2)`로 나타낼 수 있다.<br>
