--- a/LogicalStudy/5.SortingAlgorithm.md
+++ b/LogicalStudy/5.SortingAlgorithm.md
@@ -152,3 +152,60 @@ while (sortTargetIndex < exampleArray.length - 1) {
 대량의 데이터 정렬에 적합하지 않다.<br>
 
 단순 교환법, 즉 버블 정렬의 시간복잡도는 빅오표기로 `O(n2)`로 나타낼 수 있다.<br>
+
+<br>
+
+## 단순 삽입법 : 삽입 정렬 (Insertion Sort)
+
+삽입이라는 이름 그대로 요소를 하나씩 차례대로 올바른 위치에 삽입해나감으로써<br>
+최종적으로는 전체를 오름차순 또는 내림차순으로 정렬하는 알고리즘이다.<br>
+이 것을 삽입 정렬, 기본 삽입법 또는 단순히 삽입법이라고도 한다.<br>
+
+단순 삽입법은 단순 교환법(버블 정렬)과 같이 정렬 알고리즘 중에서는<br>
+비교적 간단한 알고리즘에 속한다. 단순 교환법과 마찬가지로 정렬 속도는 빠르지 않지만<br>
+정렬을 하기 전에 데이터가 어느 정도 오름차순 또는 내림차순으로 되어 있으면<br>
+빠른 처리를 기대할 수 있다.<br>
+
+```js
+// 정렬할 배열
+let exampleArray = [5, 3, 4, 1, 2];
+// 데이터를 잠시 보관할 변수
+let tempStore = null;
+
+// 삽입 정렬의 이미 한개는 정렬되었다고 전제조건을 갖는다.
+// 그렇지 않으면 비교할 대상이 없기 때문이다.
+// 그래서 0이 아닌 1부터 시작을 한다.
+// 0은 이미 정렬된 것!
+// 정렬된 첫번째 칸을 제외하고 나머지를 순회하면서
+for (let i = 1; i < exampleArray.length; i++) {
+  // 비교의 대상의 값을 미리 임시 저장해놓는다.
+  tempStore = exampleArray[i];
+  // 또한 비교 대상의 인덱스도 저장해 놓는다.
+  let targetIndex = i;
+  // 0은 정렬되었으니까 0되면 종료
+  // 비교 대상보다 정렬된 값이 크면
+  while (targetIndex > 0 && exampleArray[targetIndex - 1] > tempStore) {
+    // 정렬된 값을 비교 대상의 자리로 보낸다.
+    exampleArray[targetIndex] = exampleArray[targetIndex - 1];
+    // 한칸씩 왼쪽으로 비교대상 좁히기
+    targetIndex--;
+  }
+  // 비교 대상보다 정렬된 값이 작거나 같으면 그대로 위치
+  exampleArray[targetIndex] = tempStore;
+}
+```
+
+단순 삽입법의 경우 단순이라는 이름이 붙어 있긴 하지만, 꽤 복잡한 느낌이 든다.<br>
+단순 삽입법은 요소를 하나씩 차례대로 올바른 위치에 삽입해 나감으로써<br>
+전체를 오름차순 또는 내림차순으로 정렬하는 알고리즘이다.<br>
+정렬의 실행 속도는 그다지 빠르지 않기 때문에 데이터가 많은 경우에는 적합하지 않지만,<br>
+정렬으 하기 전에 데이터가 어느 정도 오름차순 또는 내림차순으로 되어 있으면 고속 처리를 기대할 수 있다.<br>
+
+위에서 알아본 3가지 중에서는 단순 삽입법이 평균적으로 가장 속도가 빠르다고 알려져 있다.<br>
+하지만 환경, 코딩, 데이터에 따라서 좌우되기 때문에 엄밀하게 보면<br>
+모든 것들 중에서 가장 빠르다고는 말할 수 없다.<br>
+
+단순 삽입법(삽입 정렬)의 빅오 표기법은 for loop 혹은 while loop를 2중첩으로 구현되어 `O(n2)`이다.<br>
+공간 복잡도는 `O(n)`이다.<br>
+
+<br>
