--- a/LogicalStudy/5.SortingAlgorithm.md
+++ b/LogicalStudy/5.SortingAlgorithm.md
@@ -209,3 +209,102 @@ for (let i = 1; i < exampleArray.length; i++) {
 공간 복잡도는 `O(n)`이다.<br>
 
 <br>
+
+## 퀵 정렬 : 퀵 소트 (Quick Sort)
+
+퀵 정렬은 이름에서도 알 수 있듯이, 처리 속도가 가장 빠른 정렬 알고리즘이다. (진짜 재수가 나쁘지 않으면..)<br>
+이 정렬은 대량의 데이터를 정렬할 때 자주 사용된다. 유명한 정렬 알고리즘 중에서도<br>
+실제로 사용되는 빈도가 높은 가장 중요한 알고리즘이기도 하다.<br>
+
+퀵 정렬은 `기준값을 선택한 후 그보다 작은 데이터 그룹과 큰 데이터 그룹으로 나눈다`라는 처리를<br>
+반복 수행하여 데이터를 정렬하는 알고리즘이다.<br>
+퀵 정렬의 처리를 보다 세분화해보면 다음과 같다.<br>
+
+1. 기준값을 경계로 대이터를 대소로 나누는 처리
+2. 나눈 데이터에 대해 반복적으로 똑같은 작업 실행하기
+
+```js
+// Not In Place 방법
+function quickSort(array) {
+  if (array.length < 2) {
+    return array;
+  }
+
+  const pivot = [array[0]];
+  const left = [];
+  const right = [];
+
+  for (let i = 1; i < array.length; i++) {
+    if (array[i] < pivot) {
+      left.push(array[i]);
+    } else if (array[i] > pivot) {
+      right.push(array[i]);
+    } else {
+      pivot.push(array[i]);
+    }
+  }
+
+  return quickSort(left).concat(pivot, quickSort(right));
+}
+
+quickSort([5, 3, 7, 1, 9]);
+
+/* ################################################## */
+
+// Not In Place 방법
+
+function quickSort(array, left = 0, right = array.length - 1) {
+  // 빈배열이면 리턴
+  if (left >= right) {
+    return;
+  }
+
+  // 가운데 인덱스 구해서
+  const mid = Math.floor((left + right) / 2);
+  // 가운데를 기준으로 잡는다. (가운데를 기준으로 잡는게 좋다.)
+  const pivot = array[mid];
+  const partition = divide(array, left, right, pivot);
+
+  quickSort(array, left, partition - 1);
+  quickSort(array, partition, right);
+
+  function divide(array, left, right, pivot) {
+    console.log(
+      `array: ${array}, left: ${array[left]}, pivot: ${pivot}, right: ${array[right]}`
+    );
+
+    while (left <= right) {
+      while (array[left] < pivot) {
+        left++;
+      }
+
+      while (array[right] > pivot) {
+        right--;
+      }
+
+      if (left <= right) {
+        let swap = array[left];
+        array[left] = array[right];
+        array[right] = swap;
+        left++;
+        right--;
+      }
+    }
+
+    return left;
+  }
+
+  return array;
+}
+```
+
+퀵정렬은<br>
+
+장점은 머지 소트보다 평균 2배이상 빠르다. (진짜 재수가 나쁘지 않으면..)<br>
+재수가 없을 확률이 희박하다.<br>
+
+단점은 재수가 진짜 없으면, 느리다. (물론 극복가능하다.)<br>
+또, 같은 숫자들을 정렬할 경우 순서가 섞일 수 있다. (순서가 중요한 경우 고려해봐야 한다.)<br>
+
+시간 복잡도는 `O(nlogn)`이며, 최악의 시나리오는 `O(n^2)`이다.<br>
+이미 정렬된 배열을 첫번째 원소를 기준으로 하여 퀵정렬하는게 제일 Worst 시나리오이다.<br>
