--- a/LogicalStudy/5.SortingAlgorithm.md
+++ b/LogicalStudy/5.SortingAlgorithm.md
@@ -1,18 +1,18 @@
 # 정렬 알고리즘 (Sorting algorithm)
 
-정렬 알고리즘에서 `정렬은 바꾸어 나열하는 것`을 의미한다.<br>
-즉, 데이터를 큰 순서 또는 작은 순서로 바꾸어 나열하는 알고리즘이다.<br>
-정렬을 영어로 표현하면 소트(Sort)이므로 `소트 알고리즘`이라고도 한다.<br>
-정렬에는 `작은 순서로 정렬하는 오름차순`과 `큰 순서로 정렬하는 내림차순`이 있다.<br>
+정렬 알고리즘에서 `정렬은 바꾸어 나열하는 것`을 의미합니다.<br>
+즉, 데이터를 큰 순서 또는 작은 순서로 바꾸어 나열하는 알고리즘입니다.<br>
+정렬을 영어로 표현하면 소트(Sort)이므로 `소트 알고리즘`이라고도 합니다.<br>
+정렬에는 `작은 순서로 정렬하는 오름차순`과 `큰 순서로 정렬하는 내림차순`이 있습니다.<br>
 
 앞서 탐색 알고리즘 부분에서도 언급했지만, 검색 엔진은 인터넷상에 있는 대량의 데이터 중에서<br>
-알고 싶은 정보가 게재되어 있는 웹 페이지를 탐색해 주는 프로그램이다.<br>
-하지만 해당하는 웹 페이지가 수만에서 수십만 페이지나 발견되는 경우 또한 흔하다.<br>
-따라서 이를 모두 읽는 것은 불가능하다.<br>
-검색 엔진은 발견된 웹 페이지를 중요한 정보가 실려 있을 것 같은 순서대로 정렬하여 우리에게 제시해 준다.<br>
-`대량의 정보를 알기 쉽게 정렬`함으로써 더 `사용하기 쉬워지는 것`이다.<br>
+알고 싶은 정보가 게재되어 있는 웹 페이지를 탐색해 주는 프로그램입니다.<br>
+하지만 해당하는 웹 페이지가 수만에서 수십만 페이지나 발견되는 경우 또한 흔합니다.<br>
+따라서 이를 모두 읽는 것은 불가능합니다.<br>
+검색 엔진은 발견된 웹 페이지를 중요한 정보가 실려 있을 것 같은 순서대로 정렬하여 우리에게 제시해 줍니다.<br>
+`대량의 정보를 알기 쉽게 정렬`함으로써 더 `사용하기 쉬워지는 것`입니다.<br>
 
-정렬 알고리즘중 유명한 것이 4가지가 있는데 다음과 같다.<br>
+정렬 알고리즘중 유명한 것이 4가지가 있는데 다음과 같습니다.<br>
 
 1. 단순 선택법 : 선택 정렬 (Selection Sort)
 2. 단순 교환법 : 버블 정렬 (Bubble Sort)
@@ -24,8 +24,8 @@
 ## 단순 선택법 : 선택 정렬 (Selection Sort)
 
 단순 선택법은 `정렬되지 않은 데이터 중 가장 작은 데이터를 선택하여`<br>
-`맨 앞부터 순서대로 정렬해 나가는 알고리즘`이다.<br>
-`선택 정렬` 또는 단순히 `선택법`이라고 한다.<br>
+`맨 앞부터 순서대로 정렬해 나가는 알고리즘`입니다.<br>
+`선택 정렬` 또는 단순히 `선택법`이라고 합니다.<br>
 
 ```js
 let exploreIndex = 0;
@@ -60,12 +60,12 @@ while (exploreIndex !== exampleArray.length) {
 }
 ```
 
-단순 선택법에 있어서 알고리즘의 핵시이 되고 있는 두 가지 처리는<br>
-`탐색 범위의 최솟값 찾기`라는 처리와 `탐색 범위의 최솟값과 맨 앞의 데이터 교환하기`라는 처리이다.<br>
+단순 선택법에 있어서 알고리즘의 핵시이 되고 있는 두 가지 처리는
+`탐색 범위의 최솟값 찾기`라는 처리와 `탐색 범위의 최솟값과 맨 앞의 데이터 교환하기`라는 처리입니다.
 
-구현이 쉽지만 처리 속도는 느리기 때문에 데이터가 많은 경우의 정렬에는 적합하지 않다.<br>
-선택 정렬의 빅오 표기법은 `O(n2)`이다.<br>
-지수 알고리즘이기 때문에 데이터가 적을 경우에 사용하자<br>
+구현이 쉽지만 처리 속도는 느리기 때문에 데이터가 많은 경우의 정렬에는 적합하지 않습니다.
+선택 정렬의 빅오 표기법은 `O(n2)`입니다.
+지수 알고리즘이기 때문에 데이터가 적을 경우에 사용합니다.
 
 > 지수는 O(n2), 계승은 O(n!)
 
@@ -74,11 +74,11 @@ while (exploreIndex !== exampleArray.length) {
 ## 단순 교환법 : 버블 정렬 (Bubble Sort)
 
 단순 교환법은 `인접한 데이터를 교환하는 처리를 반복`하여,<br>
-최종적으로는 `모든 데이터를 오름차순 또는 내림차순으로 정렬`하는 알고리즘이다.<br>
+최종적으로는 `모든 데이터를 오름차순 또는 내림차순으로 정렬`하는 알고리즘입니다.<br>
 
-단순 교환법의 정렬 처리는 단순하다.<br>
+단순 교환법의 정렬 처리는 단순합니다.<br>
 오름차순으로 정렬하려면 뒤부터 비교하여 앞으로 오도록 교환하는 과정을 반복하면 되고,<br>
-내림차순의 경우는 이와 반대로 진행된다.<br>
+내림차순의 경우는 이와 반대로 진행됩니다.<br>
 
 ```js
 // 정렬할 배열
@@ -149,22 +149,22 @@ while (sortTargetIndex < exampleArray.length - 1) {
 
 단순 교환법 자체는 이해하기 쉽지만,<br>
 실행속도가 보다시피 느리기 때문에,<br>
-대량의 데이터 정렬에 적합하지 않다.<br>
+대량의 데이터 정렬에 적합하지 않습니다.<br>
 
-단순 교환법, 즉 버블 정렬의 시간복잡도는 빅오표기로 `O(n2)`로 나타낼 수 있다.<br>
+단순 교환법, 즉 버블 정렬의 시간복잡도는 빅오표기로 `O(n2)`로 나타낼 수 있습니다.<br>
 
 <br>
 
 ## 단순 삽입법 : 삽입 정렬 (Insertion Sort)
 
 삽입이라는 이름 그대로 요소를 하나씩 차례대로 올바른 위치에 삽입해나감으로써<br>
-최종적으로는 전체를 오름차순 또는 내림차순으로 정렬하는 알고리즘이다.<br>
-이 것을 삽입 정렬, 기본 삽입법 또는 단순히 삽입법이라고도 한다.<br>
+최종적으로는 전체를 오름차순 또는 내림차순으로 정렬하는 알고리즘입니다.<br>
+이 것을 삽입 정렬, 기본 삽입법 또는 단순히 삽입법이라고도 합니다.<br>
 
 단순 삽입법은 단순 교환법(버블 정렬)과 같이 정렬 알고리즘 중에서는<br>
-비교적 간단한 알고리즘에 속한다. 단순 교환법과 마찬가지로 정렬 속도는 빠르지 않지만<br>
+비교적 간단한 알고리즘에 속합니다. 단순 교환법과 마찬가지로 정렬 속도는 빠르지 않지만<br>
 정렬을 하기 전에 데이터가 어느 정도 오름차순 또는 내림차순으로 되어 있으면<br>
-빠른 처리를 기대할 수 있다.<br>
+빠른 처리를 기대할 수 있습니다.<br>
 
 ```js
 // 정렬할 배열
@@ -195,30 +195,33 @@ for (let i = 1; i < exampleArray.length; i++) {
 }
 ```
 
-단순 삽입법의 경우 단순이라는 이름이 붙어 있긴 하지만, 꽤 복잡한 느낌이 든다.<br>
+단순 삽입법의 경우 단순이라는 이름이 붙어 있긴 하지만, 꽤 복잡한 느낌이 듭니다.<br>
 단순 삽입법은 요소를 하나씩 차례대로 올바른 위치에 삽입해 나감으로써<br>
-전체를 오름차순 또는 내림차순으로 정렬하는 알고리즘이다.<br>
+전체를 오름차순 또는 내림차순으로 정렬하는 알고리즘입니다.<br>
 정렬의 실행 속도는 그다지 빠르지 않기 때문에 데이터가 많은 경우에는 적합하지 않지만,<br>
-정렬으 하기 전에 데이터가 어느 정도 오름차순 또는 내림차순으로 되어 있으면 고속 처리를 기대할 수 있다.<br>
+정렬을 하기 전에 데이터가 어느 정도 오름차순 또는 내림차순으로 되어 있으면<br>
+고속 처리를 기대할 수 있습니다.<br>
 
-위에서 알아본 3가지 중에서는 단순 삽입법이 평균적으로 가장 속도가 빠르다고 알려져 있다.<br>
+위에서 알아본 3가지 중에서는 단순 삽입법이 평균적으로 가장 속도가 빠르다고 알려져 있습니다.<br>
 하지만 환경, 코딩, 데이터에 따라서 좌우되기 때문에 엄밀하게 보면<br>
-모든 것들 중에서 가장 빠르다고는 말할 수 없다.<br>
+모든 것들 중에서 가장 빠르다고는 말할 수 없습니다.<br>
 
-단순 삽입법(삽입 정렬)의 빅오 표기법은 for loop 혹은 while loop를 2중첩으로 구현되어 `O(n2)`이다.<br>
-공간 복잡도는 `O(n)`이다.<br>
+단순 삽입법(삽입 정렬)의 빅오 표기법은 for loop 혹은<br>
+while loop를 2중첩으로 구현되어 `O(n2)`입니다.<br>
+공간 복잡도는 `O(n)`입니다.<br>
 
 <br>
 
 ## 퀵 정렬 : 퀵 소트 (Quick Sort)
 
-퀵 정렬은 이름에서도 알 수 있듯이, 처리 속도가 가장 빠른 정렬 알고리즘이다. (진짜 재수가 나쁘지 않으면..)<br>
-이 정렬은 대량의 데이터를 정렬할 때 자주 사용된다. 유명한 정렬 알고리즘 중에서도<br>
-실제로 사용되는 빈도가 높은 가장 중요한 알고리즘이기도 하다.<br>
+퀵 정렬은 이름에서도 알 수 있듯이, 처리 속도가 가장 빠른 정렬 알고리즘입니다.<br>
+(진짜 재수가 나쁘지 않으면 말입니다..)<br>
+이 정렬은 대량의 데이터를 정렬할 때 자주 사용됩니다. 유명한 정렬 알고리즘 중에서도<br>
+실제로 사용되는 빈도가 높은 가장 중요한 알고리즘이기도 합니다.<br>
 
 퀵 정렬은 `기준값을 선택한 후 그보다 작은 데이터 그룹과 큰 데이터 그룹으로 나눈다`라는 처리를<br>
-반복 수행하여 데이터를 정렬하는 알고리즘이다.<br>
-퀵 정렬의 처리를 보다 세분화해보면 다음과 같다.<br>
+반복 수행하여 데이터를 정렬하는 알고리즘입니다.<br>
+퀵 정렬의 처리를 보다 세분화해보면 다음과 같습니다.<br>
 
 1. 기준값을 경계로 대이터를 대소로 나누는 처리
 2. 나눈 데이터에 대해 반복적으로 똑같은 작업 실행하기
@@ -298,13 +301,16 @@ function quickSort(array, left = 0, right = array.length - 1) {
 }
 ```
 
-퀵정렬은<br>
+퀵정렬은
 
-장점은 머지 소트보다 평균 2배이상 빠르다. (진짜 재수가 나쁘지 않으면..)<br>
-재수가 없을 확률이 희박하다.<br>
+장점은 머지 소트보다 평균 2배이상 빠릅니다.<br>
+(진짜 재수가 나쁘지 않으면요..)<br>
+재수가 없을 확률이 희박합니다.<br>
 
-단점은 재수가 진짜 없으면, 느리다. (물론 극복가능하다.)<br>
-또, 같은 숫자들을 정렬할 경우 순서가 섞일 수 있다. (순서가 중요한 경우 고려해봐야 한다.)<br>
+단점은 재수가 진짜 없으면, 느립니다. (물론 극복가능합니다.)<br>
+또, 같은 숫자들을 정렬할 경우 순서가 섞일 수 있습니다.<br>
+(순서가 중요한 경우 고려해봐야 합니다.)<br>
 
-시간 복잡도는 `O(nlogn)`이며, 최악의 시나리오는 `O(n^2)`이다.<br>
-이미 정렬된 배열을 첫번째 원소를 기준으로 하여 퀵정렬하는게 제일 Worst 시나리오이다.<br>
+시간 복잡도는 `O(nlogn)`이며, 최악의 시나리오는 `O(n^2)`입니다.<br>
+앞서 말씀드린 재수가 없는 경우이며, 이미 정렬된 배열을 첫번째 원소를 기준으로 하여<br>
+퀵정렬하는게 제일 Worst 시나리오입니다.<br>
