secure class third lecture complete

--- a/college/secure/3.KeyManagement&HashFunction.md
+++ b/college/secure/3.KeyManagement&HashFunction.md
@@ -193,3 +193,161 @@ Entropy Source -> TRNG -> (Seed) -> PRNG -> Pseudorandom bit stream
 - 무선 LAN의 KDF
 
 <br>
+
+`블록암호 기반 키 유도함수`
+
+- 핵심함수로 AES, SAFER+ 등이 사용됨
+- 무선환경의 표준 3GPP TR 35.909, IEEE 802.15.1
+- 유럽의 비동기식 제3세대 무선통신, Bluetooth 유도함수
+- 운영모드에 따라 counter, feedback, double-pipeline, iteration 모드로 분류 (NIST SP800-108)
+
+<br/>
+
+`패스워드 기반 키 유도 함수`
+
+- 패스워드(P), Salt(S), 반복함수(C)를 이용하여 키를 유도함
+- PKCS#5, NIST SP800-132
+
+<br/>
+
+### 해시함수
+
+`일방향 함수 (One-way Function)`
+
+- 변수를 통해 함수 값을 구하는 연산은 쉽지만 함수 값으로부터 변수 값을 구하는 것은 매우 어려운 함수
+- 주어진 x에 대해 f(x)를 구하는 것은 쉽지만, y=f(x)가 주어지고 x를 값을 구하는 것은 매우 어려운 함수
+- 해시 함수, f(x) = g^x (이산대수문제), 인수분해문제
+
+<br/>
+
+`충돌 (Collision)`
+
+- 서로 다른 입력 값에 대하여 동일한 해시 값이 출력되는 경우
+
+- 충돌쌍(collision-pair)
+
+  - 충돌이 일어나도록 하는 메시지들의 쌍
+  - x != x'인 x, x'에 대하여 일방향 함수 H(x) = H(x')일 때 (x, x')은 충돌쌍임
+
+- 일방향 함수는 충돌쌍을 찾기가 어려워야 암호학적으로 유용함
+
+<br/>
+
+`해시 함수 (Hash Function)`
+
+- 임의의 유한 길이의 입력 값을 받아 고정된 크기의 출력값으로 바꾸는 함수
+- 대표적 Hash 함수 : MD5, SHA1, HAS160, SHA2, SHA3,
+- 출력값 : 해시값, 해시코드, 메시지 다이제스트, 인증자, 데이터지문, 해시체크섬
+
+<br/>
+
+`암호학적 Hash 함수의 성질`
+
+- 계산 용이성 (Ease of Computation)
+
+  - Hash 함수 h의 해시값 h(x)는 계산하기 쉬움
+
+- 일방향성 (one-wayness)
+
+  - 주어진 임의의 출력값 y에 대해, y=h(x)을 만족하는 입력값 x를 찾는 것이 계산적으로 불가능함
+  - Preimage Resistance (역상 저항성)
+
+- 약한 충돌 저항성 (Weak Collision Resistance)
+
+  - 주어진 입력값 x에 대해 h(x) = h(x'), x != x'을 만족하는 다른 입력값 x'을 만족하는<br/>
+    다른 입력값 x'을 찾는 것이 계산적으로 불가능함<br/>
+  - 두 번째 역상 저항성
+
+- 강한 충돌 저항성 (Strong Collision Resistance)
+
+  - h(x) = h(x')을 만족하는 임의의 두 입력값 x, x'을 찾는 것이 계산적으로 불가능함
+
+<br/>
+
+`암호학적 Hash 함수의 용도`
+
+- 전자서명에서 사용
+
+  - 전자서명 시 전체 메시지 대신에 그 메시지를 대표하는 짧은 길이의 해시값에 서명하므로<br/>
+    효율성을 제공하고 동일한 서명효과를 얻기 위해 사용됨<br/>
+
+- 메시지의 무결성을 제공함
+
+  - 메시지에 해시값을 함께 보관하면 그 메시지가 변경되지 않고,<br/>
+    무결성을 유지한다는 것을 동일한 해시값을 갖는지 비교하여 확인할 수 있음<br/>
+  - 무결성을 제공하기 위해서는 강한 충돌 저항성을 갖는 해시함수이어야 함
+
+- 패스워드를 안전하게 저장하고 유지하기 위해 사용함
+
+  - 유닉스 시스템에서 패스워드를 평문으로 관리하지 않고 대신에 그것의 해시값을 유지함
+  - 사용자가 패스워드를 입력하면 그것의 해시값을 계산하여 유지하고 있는 해시값과 비교하여<br/>
+    올바른 패스워드가 입력되었는지 검사함<br/>
+  - password 파일에 대한 접근 권한을 획득하더라도 해시값의 일방향성 특성 때문에 계층의 패스워드를 알 수 없음
+
+- 스팸 메일을 막는데 사용됨
+
+  - e메일을 보내는 송신자에게 상당한 노력을 했다는 증거를 확인하기 전까지 e-메일 수신을 거부하도록 하여 스팸메일을 막도록 함
+
+- 블록체인 등에서 원장의 무결성을 유지하는데 사용함
+
+- 비트코인과 같은 암호화폐에서 채굴(Mining) 하는데 사용함
+
+<br/>
+
+`해시 함수의 종류`
+
+`키가 없는 해시 함수`
+
+- n비트의 평문을 k비트의 키를 사용하여 m비트의 해시값 출력
+
+<br/>
+
+`전용 해시 함수 : 암호화를 위해 사용하는 함수`
+
+- Hash 만을 목적으로 최적화된 수행을 하도록 디자인된 해시 함수임
+- 대표적 Hash 함수
+
+<br/>
+
+`모듈 연산을 기초로 한 해시 함수`
+
+- 압축 함수의 기반을 모듈 연산의 반복적인 수행에 두고 있는 해시 함수임
+- 장점 : 내장된 모듈 연산을 사용할 수 있음
+- 단점 : 속도가 빠르지 않고, 안전성의 연구에 대한 역사가 짧음
+- MASH 계열 함수가 유명함
+
+<br/>
+
+`조정탐지코드 (MDC : Manipulation Detection Code)`
+
+- 키가 없는 해시 함수로 메시지 무결성 제공
+
+<br/>
+
+`키가 있는 해시 함수`
+
+`메시지 인증코드 (Message Authentification Code)`
+
+- 임의 길이의 메시지를 암호화 비밀키를 사용하여 고정된 출력값을 얻는 Hash 함수임
+- 일반적인 메시지 인증절차는 MAC에 의한 출력인 메시지인증코드(MAC)라는 해시 함수의 특별한 형태로서<br/>
+  대칭키 기술에 의해 메시지를 인증함<br/>
+- 송신자와 수신자가 사전에 비밀키를 공유해야 함
+- 메시지의 무결성과 인증을 동시에 수행함
+- 입력값으로 메시지와 키를 받는 키가 있는 해시 함수
+- 대표적으로 CBC-MAC과 HMAC 있음
+
+<br/>
+
+`CBC-MAC`
+
+- 블록 암호에 기반을 둔 가장 널리 사용되는 메시지 인증 알고리즘 (MAC)
+- 블록 암호에 기반으로 한 MAC
+
+<br/>
+
+`HMAC`
+
+- Hash 함수를 기반으로 한 MAC으로 Bellare, Canetti, Krawczyk가 제안함
+- 두 개의 상수 ipad와 opad를 사용한 키와 XOR함
+
+<br/>
