computer structure class 6th lecture complete

--- a/college/computer_introduction/6.database.md
+++ b/college/computer_introduction/6.database.md
@@ -351,4 +351,6 @@ Application <=> DBMS (S/W) `[질의 처리기(Query Processor), 저장 관리자
   - AWS, VMware
   - 기업은 운영체제부터 어플리케이션을 관리, 네트워크, 스토리지, 서버, 가상화는 서비스로 제공
 
+<img src="../image/cloudComputing.jpeg" width="500">
+
 <br/>
